[tool.poetry]
name = "coursework-dec-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "coursework_dec_2"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
